Bump versions, add workflow